--- a/vignette/vignette.qmd
+++ b/vignette/vignette.qmd
@@ -2,11 +2,17 @@
 title: "Vignette"
 format: html
 editor: visual
+bibliography: references.bib
 ---
 
 ```{r echo = FALSE, warning = FALSE, message = FALSE}
 library(tidyverse)
 library(here)
+library(rnoaa)
+
+source("../R/get_data_for_fig.R")
+
+meta_data <- readRDS("../data/aus_stations_meta.rds")
 ```
 
 ## Introduction
@@ -21,47 +27,40 @@ Para 4 - Here we provide methods and examples showing how to better assess the q
 
 ## Data
 
-- Write about GHCNDaily data 
+Used the Global Historical Climate Network of Daily data (GHCN Daily).
 
-- Write about rainfall variables - see readme https://www1.ncdc.noaa.gov/pub/data/ghcn/daily/readme.txt
+These are the important variables used:
 
-PRCP = Precipitation (tenths of mm)
+-   PRCP = Precipitation (tenths of mm)
+-   MDPR = Multiday precipitation total (tenths of mm; use with DAPR and DWPR, if available)
+-   DAPR = Number of days included in the multiday precipiation total (MDPR)
+-   DWPR = Number of days with non-zero precipitation included in multiday precipitation total (MDPR)
 
-MDPR = Multiday precipitation total (tenths of mm; use with DAPR and 
-	          DWPR, if available)
+These variables are as described in the [GHCN daily readme](https://www1.ncdc.noaa.gov/pub/data/ghcn/daily/readme.txt).
 
-DAPR = Number of days included in the multiday precipiation 
-	          total (MDPR)
+There are fourteen flags associated with automatic testing[@durre2010].
 
-DWPR = Number of days with non-zero precipitation included in 
-	          multiday precipitation total (MDPR)
+| Quality Assurance Test       | Details                                                                        | Flag |
+|-----------------|--------------------------------------|-----------------|
+| NA                           | Did not fail any quality assurance check                                       | ""   |
+| Duplicate check              | Identifies duplicated observations                                             | "D"  |
+| Gap check                    | Identifies maximal differences between observations                            | "G"  |
+| Internal Consistency Check   | Ensures data doesn't violate meteorological conditions (e.g negative rainfall) | "I"  |
+|                              | Failed streak/frequent-value check                                             | "K"  |
+|                              | Failed check on length of multiday period                                      | "L"  |
+| Megaconsistency check        | Checks it doesn't break known records                                          | "M"  |
+|                              | Failed naught check                                                            | "N"  |
+| Climatological outlier check | Checks for abnormally large observations                                       | "O"  |
+|                              | Failed lagged range check                                                      | "R"  |
+|                              | Failed spatial consistency check                                               | "S"  |
+|                              | Failed temporal consistency check                                              | "T"  |
+|                              | Temperature too warm for snow                                                  | "W"  |
+|                              | Failed bounds check                                                            | "X"  |
+|                              | Flagged as a result of an official Datzilla investigation                      | "Z"  |
 
-MDPR = Multiday precipitation total (tenths of mm; use with DAPR and 
-	          DWPR, if available)
+: 14 Existing Quality Flags.
 
-
-- Flags associated wtih automatic testing
-
-QFLAG1     is the quality flag for the first day of the month.  There are fourteen possible values:
-
-           Blank = did not fail any quality assurance check
-           D     = failed duplicate check
-           G     = failed gap check
-           I     = failed internal consistency check
-           K     = failed streak/frequent-value check
-	         L     = failed check on length of multiday period 
-           M     = failed megaconsistency check
-           N     = failed naught check
-           O     = failed climatological outlier check
-           R     = failed lagged range check
-           S     = failed spatial consistency check
-           T     = failed temporal consistency check
-           W     = temperature too warm for snow
-           X     = failed bounds check
-	   Z     = flagged as a result of an official Datzilla 
-	           investigation
-
--   Where and how to download the data (rnoaa)
+GHCN Daily data for precipitation can be accessed using the `rnoaa` package [@rnoaa].
 
 ### Visualisation
 
@@ -87,23 +86,88 @@ extreme_event_temporal_plot
 
 Caption: Daily rainfall observations in Brisbane, Australia. Solid circles are coloured by the measured precipitation. Empty circles show zero observations.A grey cross indicates missing data. Tagged accumulations, rainfall totals accumulated over multiple days, are shown with an empty circle and a cross. The final day in the accumulation period is coloured by the multiday total and the other days are coloured grey.
 
-### Quality Issues 
+### Quality Issues
 
-On 26-01-1974 there was an extreme rainfall event in Brisbane, Australia, Figure XXXX. The majority of stations in this region recorded their annual maximum on this date. However, observations recorded at some stations are spatially inconsistent.
+On 26-01-1974 there was an extreme rainfall event in Brisbane, Australia, Figure 1. The majority of stations in this region recorded their annual maximum on this date. However, visual inspection of the data reveals numerous data quality errors.
 
-One of the stations has missing data on 26-01-1974. This station is shown with a cross. Observations were recorded on the days prior and missing observations are recorded in the days directly after. This suggests that the reason the observation is missing may be related to the extreme event, such as the station washing away. This missing observation is therefore likely to be a missing maximum.
+Of the 27 stations in this example on 26-01-1974 there are 6 stations with extreme observations that are not recorded reliably or are erroreous. It appears that 3 maxima occurred within tagged accumulations, 1 station recorded missing data instead of a maximum and 2 observations were falsely recorded as zero instead of tagged accumulations.
 
-Also on 26-01-1974 two observations are recorded as 0 mm. One of these
-was flagged as spatially inconsistent by the GHCN-Daily quality control. The other was not. These zeros are clearly spurious given the surrounding rainfall. The true observations are likely to have been annual maxima for these stations.
-
-There are also three tagged accumulations that cover 26-01-1974. The annual maximum for each of these stations is likely to have been recorded within the accumulation. Automatic identification of individual daily totals from an accumulation is challenging and we do not attempt it here.
-
-Within this example there are also suspected untagged accumulations. Untagged accumulations occur when multiple days of rainfall are recorded as a single day. These types of observations can present as spurious maxima. An example of an untagged accumulation is the annual maximum observation of 240.4 mm recorded on 28-01-1974. On the four days prior to 28-01-1974, 0 mm of rainfall was recorded at the station. However, this period of zero recorded rainfall includes an extreme rainfall event on the 26-01-1974. Additionally, on
-28-01-1974 the five closest stations recorded approximately 50 mm of rainfall compared with 240.4 mm. Given the observations at the surrounding stations from 24-01-1974 to 28-01-1974, this observation is clearly spurious and should have been flagged for quality.
-
-Of the 27 stations in this example on 26-01-1974; we suspect that 3 maxima occurred within tagged accumulations, 1 station recorded missing data instead of a maximum and 2 observations were falsely recorded as zero instead of tagged accumulations. If the extremal observations are not treated appropriately during preprocessing, these observations will result in errors in the annual maximum observations. Whilst in general statistical methods will be robust to some errors within the data, care should be taken to identify as many systematic and prevalent sources of error as possible.
+If the extremal observations are not treated appropriately during pre-processing, these observations will result in errors in the annual maximum observations. Whilst in general statistical methods will be robust to some errors within the data, care should be taken to identify as many systematic and prevalent sources of error as possible. Particularly, for significant extreme events causing impacts or for record breaking observations.
 
 ## Quality Control Issues
+
+### Outliers vs Extremes
+
+**Problem**
+
+The current outlier test used to automtically flag outliers assumes normality. This is a poor assumption for rainfall. Rainfall distributions are skew and the tail of the distribution is commonly heavy. This leds to false outlier flags of extreme observations.
+
+The first step in an analysis is commonly to filter the data to remove observations that have been flagged for poor quality. This means people are removing true extreme values in their analysis.
+
+**Example**
+
+```{r}
+outlier_data <- readRDS("../data/outliers.rds")
+outlier_reflag_data <- readRDS("../data/prcp_reflag.rds")
+num_outliers = nrow(outlier_data)
+num_outliers_w_nbrs = nrow(outlier_reflag_data)
+reflag_count = outlier_reflag_data$new_flag |> table()
+
+```
+
+Using a subset of stations from Southeast Queensland in Australia, we find 62 observations flagged as outliers from 1297 stations (\~5%).
+
+The automated quality testing runs the test for outlier first. Flagging any observations that fail the test, and not using these in any further quality testing.
+
+For 60 of these stations, there are sufficient neighbours to analysis the spatial consistency of these "so-called" outliers. We find that 37 of 60 of these observations would pass a spatial consistency check and are not outliers. This is a false-positive rate of 62% and provides a clear indication that this flag is wholly unsuitable.
+
+Example 1: Correct outlier flag.
+
+```{r eg1, cache = TRUE}
+extreme_date = as_date("1893-06-09")
+stn_id = "ASN00040059"
+stn_meta = meta_data |> 
+  filter(id == stn_id)
+fig_data_for_plot <- get_data_for_fig(extreme_date, stn_lat = stn_meta$latitude, stn_long = stn_meta$longitude, meta_data)
+```
+
+\
+
+### R Solution
+
+-   Don't filter the data by the "O" flag
+
+### Proposed Solution
+
+-   ??? if there is good coverage use spatial consistency checking / nearest neighbours ???
+-   meta data or historical newspapers
+-   Need a better solution.
+
+### Fit a GEV with and without obs to show impact
+
+-   Miralles and Davision trigger event paper
+-   Venezuala example (classic)
+-   Don't have other examples in the data
+-   How many "O"'s aren't really "O"'s - false positive rate
+-   Demonstrate this in the data somehow
+
+### Untagged Accumulations
+
+### Flagging systematic missingness
+
+### Conclusions
+
+Write some stuff here
+
+### Appendix
+
+Other fun quality issues:
+
+-   Elevation
+
+-   Records prior to European arrival in Australia
+
+Curious but aside - How does this carry through to the gridded data.
 
 ### Example Issue Write Up
 
@@ -112,49 +176,3 @@ Of the 27 stations in this example on 26-01-1974; we suspect that 3 maxima occur
 -   Provide R function(s) to address the issue
 -   Provide suggested updated quality flag
 -   Depending on the issue, demonstrate the impact of this on a basic GEV analysis with and without the fix.
-
-<br><br>
-
-### Outliers vs Extremes
-
-#### Problem
-
-- Current test assumes normality which is terrible for rainfall which is not normal
-- Led to lots of false outlier flags 
-- People should not filter their extreme data using these flags otherwise liable to remove true extrmes. 
-- cite the automated QC paper 
-
-### Examples ??? 
-
-- Venezuala example (classic) 
-- Don't have other examples in the data 
-- How many "O"'s aren't really "O"'s  - false positive rate 
-- Demonstrate this in the data somehow 
-
-### R Solution 
-- Don't filter the data by the "O" flag
-
-### Proposed Solution 
-- ??? if there is good coverage use spatial consistency checking / nearest neighbours ??? 
-- meta data or historical newspapers 
-- Need a better solution. 
- 
-### Fit a GEV with and without obs to show impact 
-
-- Miralles and Davision trigger event paper
-
-<!-- nbr_subset = # vector of ids # -->
-<!-- min_num_nbrs = 4 -->
-<!-- extreme rainfall - rough rule 20 km  -->
-
-<br><br>
-
-### Untagged Accumulations
-
-### Flagging systematic missingness
-
--   (curious but aside - How does this carry through to the gridded data)
-
-### Conclusions
-
-### References
