--- a/vignette/references.bib
+++ b/vignette/references.bib
@@ -21,3 +21,16 @@
 	date = {2021},
 	url = {https://CRAN.R-project.org/package=rnoaa}
 }
+
+@article{miralles2023,
+	title = {Timing and spatial selection bias in rapid extreme event attribution},
+	author = {Miralles, {Ophélia} and Davison, Anthony C.},
+	year = {2023},
+	month = {09},
+	date = {2023-09-01},
+	journal = {Weather and Climate Extremes},
+	pages = {100584},
+	volume = {41},
+	doi = {10.1016/j.wace.2023.100584},
+	url = {https://www.sciencedirect.com/science/article/pii/S2212094723000373}
+}
