--- a/vignette/vignette.qmd
+++ b/vignette/vignette.qmd
@@ -11,6 +11,8 @@ library(here)
 library(rnoaa)
 
 source("../R/get_data_for_fig.R")
+source("../R/create_spatial_plot.R")
+source("../R/create_temporal_plot.R")
 
 meta_data <- readRDS("../data/aus_stations_meta.rds")
 ```
@@ -96,17 +98,17 @@ If the extremal observations are not treated appropriately during pre-processing
 
 ## Quality Control Issues
 
-### Outliers vs Extremes
+### True extremes values are not outliers
 
 **Problem**
 
-The current outlier test used to automtically flag outliers assumes normality. This is a poor assumption for rainfall. Rainfall distributions are skew and the tail of the distribution is commonly heavy. This leds to false outlier flags of extreme observations.
+The current outlier test used to automtically flag outliers assumes normality. This is a poor assumption for rainfall. Rainfall distributions are skew and are commonly heavy tailed. True extreme observations are therefore being incorrectly flagged as outliers.
 
-The first step in an analysis is commonly to filter the data to remove observations that have been flagged for poor quality. This means people are removing true extreme values in their analysis.
+Given the first step in an analysis is commonly to filter the data to remove observations flagged for poor quality this is concern. People are removing true extreme values from their analysis. The values that are being removed are often the largest observations on the record. Such observations are known to have a large impact estimates of high quanitles from the fitted distribution[@miralles2023].
 
-**Example**
+**Examples in data**
 
-```{r}
+```{r outliers, echo = FALSE}
 outlier_data <- readRDS("../data/outliers.rds")
 outlier_reflag_data <- readRDS("../data/prcp_reflag.rds")
 num_outliers = nrow(outlier_data)
@@ -115,31 +117,93 @@ reflag_count = outlier_reflag_data$new_flag |> table()
 
 ```
 
-Using a subset of stations from Southeast Queensland in Australia, we find 62 observations flagged as outliers from 1297 stations (\~5%).
+Using a subset of stations from Southeast Queensland in Australia, we find there are 62 observations flagged as outliers from 1297 stations (\~5%). For 60 of these stations, there are sufficient neighbours to analysis the spatial consistency of these "so-called" outliers.
 
-The automated quality testing runs the test for outlier first. Flagging any observations that fail the test, and not using these in any further quality testing.
-
-For 60 of these stations, there are sufficient neighbours to analysis the spatial consistency of these "so-called" outliers. We find that 37 of 60 of these observations would pass a spatial consistency check and are not outliers. This is a false-positive rate of 62% and provides a clear indication that this flag is wholly unsuitable.
+We find that 37 of 60 of these observations would pass a spatial consistency check and are spuriously flagged. This is a false-positive rate of 62% and provides a clear indication that this flag is wholly unsuitable. The false-positive rate may in fact be higher given we also suspect that the spatial consistency check is not particularly well formulated for rainfall *(need to provide more detail here)*.\
+\
+\* Should go through and visually inspect all 60\*
 
 Example 1: Correct outlier flag.
 
-```{r eg1, cache = TRUE}
+```{r eg1, cache = TRUE, echo = FALSE, warning = FALSE, message = FALSE}
 extreme_date = as_date("1893-06-09")
 stn_id = "ASN00040059"
 stn_meta = meta_data |> 
   filter(id == stn_id)
-fig_data_for_plot <- get_data_for_fig(extreme_date, stn_lat = stn_meta$latitude, stn_long = stn_meta$longitude, meta_data)
+
+fig_data_for_plot <- get_data_for_fig(
+  extreme_date, 
+  stn_lat = stn_meta$latitude, 
+  stn_long = stn_meta$longitude, 
+  meta_data = meta_data)
+
+obs_month_str = month(extreme_date, label = TRUE, abbr = TRUE) |>
+  as.character()
+
+eg1_outlier_plot <- create_temporal_plot(
+  fig_data_for_plot,
+  city_country_str = stn_meta$name,
+  month_year_str = paste(obs_month_str, year(extreme_date)))
+
+eg1_outlier_plot
 ```
 
-\
+Example 2: Incorrect outlier flag (spatial consistent observations).
 
-### R Solution
+```{r eg2, cache = TRUE, echo = FALSE, warning = FALSE, message = FALSE}
+extreme_date = as_date("1893-06-09")
+stn_id = "ASN00040059"
+stn_meta = meta_data |> 
+  filter(id == stn_id)
 
--   Don't filter the data by the "O" flag
+fig_data_for_plot <- get_data_for_fig(
+  extreme_date, 
+  stn_lat = stn_meta$latitude, 
+  stn_long = stn_meta$longitude, 
+  meta_data = meta_data)
 
-### Proposed Solution
+obs_month_str = month(extreme_date, label = TRUE, abbr = TRUE) |>
+  as.character()
 
--   ??? if there is good coverage use spatial consistency checking / nearest neighbours ???
+eg2_outlier_plot <- create_temporal_plot(
+  fig_data_for_plot,
+  city_country_str = stn_meta$name,
+  month_year_str = paste(obs_month_str, year(extreme_date)))
+
+eg2_outlier_plot
+```
+
+Example 3: Incorrect outlier flag, but flagged spatial inconsistent.
+
+```{r eg3, cache = TRUE, echo = FALSE, warning = FALSE, message = FALSE}
+extreme_date = as_date("1893-06-09")
+stn_id = "ASN00040059"
+stn_meta = meta_data |> 
+  filter(id == stn_id)
+
+fig_data_for_plot <- get_data_for_fig(
+  extreme_date, 
+  stn_lat = stn_meta$latitude, 
+  stn_long = stn_meta$longitude, 
+  meta_data = meta_data)
+
+obs_month_str = month(extreme_date, label = TRUE, abbr = TRUE) |>
+  as.character()
+
+eg2_outlier_plot <- create_temporal_plot(
+  fig_data_for_plot,
+  city_country_str = stn_meta$name,
+  month_year_str = paste(obs_month_str, year(extreme_date)))
+
+eg2_outlier_plot
+```
+
+### Suggested Approach
+
+The automated quality testing runs the test for outlier first. Flagging any observations that fail the test. Once an observation is flagged it is not used in any further quality testing. It is clear, that where possible a spatial consistency check should also be used to consider the suitability of these observations for use in analysis.
+
+Arguably, the autmatic outlier flag should be ignored without further investigation. At a minimum exploratory data visualisation for any record breaking observations.
+
 -   meta data or historical newspapers
 -   Need a better solution.
 
