--- a/vignette/references.bib
+++ b/vignette/references.bib
@@ -34,3 +34,45 @@
 	doi = {10.1016/j.wace.2023.100584},
 	url = {https://www.sciencedirect.com/science/article/pii/S2212094723000373}
 }
+
+@article{viney2004,
+	title = {It never rains on Sunday: the prevalence and implications of untagged multi{-}day rainfall accumulations in the Australian high quality data set},
+	author = {Viney, Neil R. and Bates, Bryson C.},
+	year = {2004},
+	month = {06},
+	date = {2004-06-29},
+	journal = {International Journal of Climatology},
+	pages = {1171--1192},
+	volume = {24},
+	number = {9},
+	doi = {10.1002/joc.1053},
+	url = {http://dx.doi.org/10.1002/joc.1053},
+	langid = {en}
+}
+
+@article{saunders2017,
+	title = {The spatial distribution of rainfall extremes and the influence of El Niño Southern Oscillation},
+	author = {Saunders, Kate and Stephenson, Alec G. and Taylor, Peter G. and Karoly, David},
+	year = {2017},
+	date = {2017},
+	journal = {Weather and climate extremes},
+	pages = {17{\textendash}28},
+	volume = {18},
+	url = {https://www.sciencedirect.com/science/article/pii/S2212094717300786},
+	note = {Publisher: Elsevier}
+}
+
+@article{king2012,
+	title = {The efficacy of using gridded data to examine extreme rainfall characteristics: a case study for Australia},
+	author = {King, Andrew D. and Alexander, Lisa V. and Donat, Markus G.},
+	year = {2012},
+	month = {09},
+	date = {2012-09-11},
+	journal = {International Journal of Climatology},
+	pages = {2376--2387},
+	volume = {33},
+	number = {10},
+	doi = {10.1002/joc.3588},
+	url = {http://dx.doi.org/10.1002/joc.3588},
+	langid = {en}
+}
